# llm-guard

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
eval/: README.md  benchmark_confidence.py  benchmark_conflict.py
examples/: demo.py
src/llm_guard/: __main__.py  cli.py  config.py  proxy.py  server.py  streaming.py
src/llm_guard/analyzers/: base.py  confidence.py  conflict.py  verification.py
src/llm_guard/enrichment/: request_enricher.py  response_enricher.py
src/llm_guard/utils/: consistency.py  logprobs_math.py  text_patterns.py
tests/: conftest.py  test_confidence.py  test_config.py  test_conflict.py  test_consistency.py  test_integration.py  test_logprobs_math.py  test_proxy.py  test_request_enricher.py  test_response_enricher.py  test_streaming.py  test_verification.py
